menukort rettelser næsten done

--- a/drinkskort.html
+++ b/drinkskort.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="menukort.css" />
@@ -10,73 +11,47 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+        rel="stylesheet" />
     <title>Drinks & Soft drinks</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <a href="index.html">
-        <img src="img/logo.webp" alt="Logo" class="logo" />
-      </a>
-      <nav>
-        <ul class="menu">
-          <li><a href="menukort.html" class="nav-link active">Menu</a></li>
-          <li><a href="bord.html">Booking</a></li>
-          <li><a href="events.html">Events</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-      </nav>
+        <a href="index.html">
+            <img src="img/logo.webp" alt="Logo" class="logo" />
+        </a>
+        <nav>
+            <ul class="menu">
+                <li><a href="menukort.html" class="nav-link active">Menu</a></li>
+                <li><a href="bord.html">Booking</a></li>
+                <li><a href="events.html">Events</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
     </header>
     <main>
-      <div class="menu_knap_flex">
-        <a class="hvid_knap_menu" href="menukort.html">Wine</a>
-        <a class="hvid_knap_menu" href="madkort.html">Food</a>
-        <a class="hvid_knap_menu" href="drinkskort.html">Drinks & Soft drinks</a>
-      </div>
-
-      <div class="filter_buttons">
-        <button class="filter_knap">Drinks</button>
-        <button class="filter_knap">Soft Drinks</button>
-      </div>
-
-      <!------------------------------------------- COCKTAILS & SOFT DRINKS MENU ----------------------------------------------------->
-      <div class="menu_section">
-        <h1>Drinks & Soft Drinks</h1>
-        <div class="grid_1-1_drinks">
-          <!--------------- COCKTAILS --------------->
-          <div>
-            <h2>Drinks</h2>
-            <ul>
-              <li>
-                <div class="menu_left">
-                  <p>Aperol Spritz</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">100,- DKK</div>
-              </li>
-
         <div class="menu_knap_flex">
-            <a class="forside_button" href="menukort.html">Wine</a>
-            <a class="forside" href="madkort.html">Food</a>
-            <a class="forside_button" href="drinkskort.html">Drinks & Soft drinks</a>
+            <a class="hvid_knap_menu" href="menukort.html">Wine</a>
+            <a class="hvid_knap_menu" href="madkort.html">Food</a>
+            <a class="hvid_knap_menu" href="drinkskort.html">Drinks & Soft drinks</a>
         </div>
 
         <div class="filter_buttons">
-            <a class="filter_knap" href="#drinks">Drinks</a>
-            <a class="filter_knap" href="#soft">Soft Drinks</a>
+            <button class="filter_knap">Drinks</button>
+            <button class="filter_knap">Soft Drinks</button>
         </div>
-
 
         <!------------------------------------------- COCKTAILS & SOFT DRINKS MENU ----------------------------------------------------->
         <div class="menu_section">
             <h1>Drinks & Soft Drinks</h1>
-            <div class="grid_1-1_drinks">
 
+            <div class="grid_1-1_drinks">
                 <!--------------- COCKTAILS --------------->
                 <div id="drinks">
                     <h2>Drinks</h2>
@@ -153,183 +128,115 @@
                             <div class="menu_price">70,- DKK</div>
                         </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>Gin Hass</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">100,- DKK</div>
-              </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Gin Hass</p>
+                            </div>
+                            <hr class="menu_line" />
+                            <div class="menu_price">100,- DKK</div>
+                        </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>Kir</p>
+                    </ul>
                 </div>
-                <hr class="menu_line" />
-                <div class="menu_price">90,- DKK</div>
-              </li>
-
-              <li>
-                <div class="menu_left">
-                  <p>Negroni Shagliato</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">100,- DKK</div>
-              </li>
-
-              <li>
-                <div class="menu_left">
-                  <p>Port Tonic</p>
+                <!--------------- IMG DRINK -------------->
+                <div>
+                    <img class="drinks_img" src="img/drink.webp" alt="billede af aperol spritz" />
                 </div>
             </div>
+
+
             <!----------------- SOFT DRINKS ---------------->
-            <div id="soft">
+            <div>
                 <h2>Soft drinks</h2>
 
-              <li>
-                <div class="menu_left">
-                  <p>Moscow Mule</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">90,- DKK</div>
-              </li>
+                <ul>
+                    <li>
+                        <div class="menu_left">
+                            <p>Soft drinks -</p>
+                            <p class="small_p">Coca Cola, Coca cola zero, Fanta</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">40,- DKK</div>
+                    </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>Irish Coffee</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">120,- DKK</div>
-              </li>
+                    <li>
+                        <div class="menu_left">
+                            <p>Lemon</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">40,- DKK</div>
+                    </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>8 Year Armagnac Domaine Horgelus</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">70,- DKK</div>
-              </li>
+                    <li>
+                        <div class="menu_left">
+                            <p>Organic Danish apple juice</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">40,- DKK</div>
+                    </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>12 Year Amagnac Domaine Horgelus</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">90,- DKK</div>
-              </li>
+                    <li>
+                        <div class="menu_left">
+                            <p>Water with or without sparkles</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">20,- DKK</div>
+                    </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>20 Year Armagnac Domaine Horgelus</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">110,- DKK</div>
-              </li>
+                    <li>
+                        <div class="menu_left">
+                            <p>Beer 33 cl - Pilsner Classic, Wheat or IPA -</p>
+                            <p class="small_p">From Møns Bryghus, best micro -brewery in Denmark.</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">65,- DKK</div>
+                    </li>
 
-              <li>
-                <div class="menu_left">
-                  <p>Limoncello</p>
-                </div>
-                <hr class="menu_line" />
-                <div class="menu_price">70,- DKK</div>
-              </li>
-            </ul>
-          </div>
+                    <li>
+                        <div class="menu_left">
+                            <p>Non-alcoholic beer from Møn 33 cl - Classic and IPA</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">45,- DKK</div>
+                    </li>
 
-          <!--------------- IMG DRINK -------------->
-          <div>
-            <img class="drinks_img" src="img/drink.webp" alt="billede af aperol spritz" />
-          </div>
+                    <li>
+                        <div class="menu_left">
+                            <p>Coffee: ristretto, espresso or lungo</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">40,- DKK</div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <!----------------- SOFT DRINKS ---------------->
-        <div>
-          <h2>Soft drinks</h2>
-
-          <ul>
-            <li>
-              <div class="menu_left">
-                <p>Soft drinks -</p>
-                <p class="small_p">Coca Cola, Coca cola zero, Fanta</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">40,- DKK</div>
-            </li>
-
-            <li>
-              <div class="menu_left">
-                <p>Lemon</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">40,- DKK</div>
-            </li>
-
-            <li>
-              <div class="menu_left">
-                <p>Organic Danish apple juice</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">40,- DKK</div>
-            </li>
-
-            <li>
-              <div class="menu_left">
-                <p>Water with or without sparkles</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">20,- DKK</div>
-            </li>
-
-            <li>
-              <div class="menu_left">
-                <p>Beer 33 cl - Pilsner Classic, Wheat or IPA -</p>
-                <p class="small_p">From Møns Bryghus, best micro -brewery in Denmark.</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">65,- DKK</div>
-            </li>
-
-            <li>
-              <div class="menu_left">
-                <p>Non-alcoholic beer from Møn 33 cl - Classic and IPA</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">45,- DKK</div>
-            </li>
-
-            <li>
-              <div class="menu_left">
-                <p>Coffee: ristretto, espresso or lungo</p>
-              </div>
-              <hr class="menu_line" />
-              <div class="menu_price">40,- DKK</div>
-            </li>
-          </ul>
-        </div>
-      </div>
     </main>
+
+
     <footer>
-      <h2>Join our newsletter</h2>
-      <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
+        <h2>Join our newsletter</h2>
+        <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
 
-      <form class="sign-up">
-        <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
-        <button class="sign-up-button">Sign up</button>
-      </form>
+        <form class="sign-up">
+            <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
+            <button class="sign-up-button">Sign up</button>
+        </form>
 
-      <div class="footer-nederst">
-        <div class="kontakt">
-          <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
-          <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
-          <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
-          <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
+        <div class="footer-nederst">
+            <div class="kontakt">
+                <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
+                <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
+                <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
+                <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
+            </div>
+
+            <div class="rapport">
+                <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
+                <p>Smiley rapport</p>
+                <p>© 2025 Chums Vinbar & Bistro</p>
+            </div>
         </div>
-
-        <div class="rapport">
-          <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
-          <p>Smiley rapport</p>
-          <p>© 2025 Chums Vinbar & Bistro</p>
-        </div>
-      </div>
     </footer>
-  </body>
+</body>
+
 </html>
