sera_forside_torsdag_rettelser

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <div>
-          <img class="location_img" src="img/location.webp" alt="billede af vin på hylder" />
+          <img class="location_img" src="./img/location.webp" alt="billede af vin på hylder" />
         </div>
       </div>
 
@@ -113,9 +113,7 @@
           <p class="about_us_p">At Chums we specialize in both delicious warm cheese -including Mont D’Or when it is in season from September to March - as well as fondue and baked Camembert.</p>
           <p class="about_us_p">Bring your friends, family or your loved ones, and we’ll make sure you have a taste experience out of the ordinary. You’ll find our winebars in Copenhagen near Nørreport st. and in Helsingør by Gammel Torv.</p>
         </div>
-        <div class="about_us_img">
-          <img src="img/aboutus.webp" alt="billede af chums vinvæg" />
-        </div>
+        <div class="about_us_img"><img src="./img/aboutus.webp" alt="billede af chums vinvæg" /></div>
       </div>
 
       <div class="ratings_section">
