top knap menu done

--- a/drinkskort.html
+++ b/drinkskort.html
@@ -17,7 +17,7 @@
     <title>Drinks & Soft drinks</title>
 </head>
 
-<body>
+<body id="top">
     <header>
         <a href="index.html">
             <img src="img/logo.webp" alt="Logo" class="logo" />
@@ -50,8 +50,8 @@
         <!------------------------------------------- COCKTAILS & SOFT DRINKS MENU ----------------------------------------------------->
         <div class="menu_section">
             <h1>Drinks & Soft Drinks</h1>
-
             <div class="grid_1-1_drinks">
+
                 <!--------------- COCKTAILS --------------->
                 <div id="drinks">
                     <h2>Drinks</h2>
@@ -136,15 +136,33 @@
                             <div class="menu_price">100,- DKK</div>
                         </li>
 
-                    </ul>
+                        <li>
+                            <div class="menu_left">
+                                <p>Kir</p>
+                            </div>
+                            <hr class="menu_line" />
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>Negroni Shagliato</p>
+                            </div>
+                            <hr class="menu_line" />
+                            <div class="menu_price">100,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>Port Tonic</p>
+                            </div>
                 </div>
+
                 <!--------------- IMG DRINK -------------->
                 <div>
                     <img class="drinks_img" src="img/drink.webp" alt="billede af aperol spritz" />
                 </div>
             </div>
-
-
             <!----------------- SOFT DRINKS ---------------->
             <div>
                 <h2>Soft drinks</h2>
@@ -210,6 +228,7 @@
                 </ul>
             </div>
         </div>
+        <a href="#top" class="back-to-top">To top</a>
     </main>
 
 
