--- a/menukort.html
+++ b/menukort.html
@@ -17,14 +17,14 @@
     <title>Wine</title>
 </head>
 
-<body>
+<body id="top">
     <header>
         <a href="index.html">
             <img src="img/logo.webp" alt="Logo" class="logo" />
         </a>
         <nav>
             <ul class="menu">
-                <li><a href="menukort.html"class="nav-link active">Menu</a></li>
+                <li><a href="menukort.html" class="nav-link active">Menu</a></li>
                 <li><a href="bord.html">Booking</a></li>
                 <li><a href="events.html">Events</a></li>
             </ul>
@@ -275,18 +275,18 @@
                             <hr class="menu_line">
                             <div class="menu_price">1400,- DKK</div>
                         </li>
+                        <li class="menu_item">
+                            <div class="menu_left">
+                                <p>2015 Oremo, Tenuta Sette Ponti</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">1800,- DKK</div>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div>
                 <ul>
-                    <li class="menu_item">
-                        <div class="menu_left">
-                            <p>2015 Oremo, Tenuta Sette Ponti</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">1800,- DKK</div>
-                    </li>
 
                     <li class="menu_item">
                         <div class="menu_left">
@@ -675,7 +675,7 @@
                     <li class="menu_item">
                         <div class="menu_left">
                             <p>2022 Piemonte Chardonnay -</p>
-                            <p.class="small_p">Dry</p>
+                            <p class="small_p">Dry</p>
                         </div>
                         <hr class="menu_line">
                         <div class="menu_price">80/400,- DKK</div>
@@ -906,7 +906,7 @@
             </div>
         </div>
 
-
+        <a href="#top" class="back-to-top">To top</a>
     </main>
     <footer>
         <h2>Join our newsletter</h2>
