--- a/madkort.html
+++ b/madkort.html
@@ -17,7 +17,7 @@
     <title>Food</title>
 </head>
 
-<body>
+<body id="top">
     <header>
         <a href="index.html">
             <img src="img/logo.webp" alt="Logo" class="logo" />
@@ -305,6 +305,7 @@
                 </ul>
             </div>
         </div>
+        <a href="#top" class="back-to-top">To top</a>
     </main>
 
     <footer>
